--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get: ^4.6.6
 
   flutter_svg: ^1.1.6
+  sqflite: ^2.3.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
@@ -80,9 +82,22 @@ flutter:
   fonts:
     - family: Montserrat
       fonts:
-        # - asset: fonts/Montserrat-Regular.ttf
-        # - asset: fonts/Montserrat-Bold.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+        - asset: assets/font/Montserrat/static/Montserrat-Regular.ttf
+          weight: 400
+        - asset: assets/font/Montserrat/static/Montserrat-Medium.ttf
+          weight: 500
+        - asset: assets/font/Montserrat/static/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: assets/font/Montserrat/static/Montserrat-Bold.ttf
+          weight: 700
+        # - asset: assets/font/Montserrat/static/Montserrat-Medium.ttf
+        # - asset: assets/font/Montserrat/static/Montserrat-Regular.ttf
+        # - asset: assets/font/Montserrat/static/Montserrat-BlackItalic.ttf
+        # - asset: assets/font/Montserrat/static/Montserrat-Medium.ttf
+        # - asset: assets/font/Montserrat/static/Montserrat-Regular.ttf
+        # - asset: assets/font/Montserrat/static/Montserrat-BlackItalic.ttf
+        # - asset: assets/font/Montserrat/static/Montserrat-Medium.ttf
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
