--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^1.1.6
   sqflite: ^2.3.0
   path: ^1.8.3
+  battery_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
